--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:8000/",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "mongoose": "^6.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/react": "^18.0.24"
   }
 }
